# apps/api/src/routes/v1/index.ts
@@ -1,13 +1,15 @@
 import { Hono } from "hono";
-import gamesRoutes from "./games";
-import platformsRoutes from "./platforms";
 import distributorsRoutes from "./distributors";
-import gameRanksRoutes from "./game-ranks";
-import userProfilesRoutes from "./user-profiles";
 import eventAttendeesRouter from "./event-attendees";
 import eventInvitationsRouter from "./event-invitations";
 import eventsRouter from "./events";
+import gameRanksRoutes from "./game-ranks";
+import gamesRoutes from "./games";
 import languagesRouter from "./languages";
+import lobbiesRoutes from "./lobbies";
+import platformsRoutes from "./platforms";
+import userProfilesRoutes from "./user-profiles";
+
 const v1Router = new Hono();
 
 v1Router.route("/games", gamesRoutes);
@@ -19,6 +21,7 @@ v1Router.route("/event-attendees", eventAttendeesRouter);
 v1Router.route("/event-invitations", eventInvitationsRouter);
 v1Router.route("/events", eventsRouter);
 v1Router.route('/languages', languagesRouter);
+v1Router.route('/lobbies', lobbiesRoutes);
 
 export default v1Router;
 
